[tool.poetry]
name = "dfrus"
version = "0.0.10"
description = "Patcher for text embedded to the executable of the Dwarf Fortress game"
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dataclasses = { version = "^0.8", python = "~3.6" }
click = "^8.1.3"
peclasses = { url = "https://github.com/dfint/peclasses/releases/download/0.2.0/peclasses-0.2.0-py3-none-any.whl" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dfrus = 'dfrus.dfrus:_main'
extract_strings = 'dfrus.extract_strings:_main'
edit_relocs = "dfrus.edit_relocs:_main"
