[tool.poetry]
name = "dfrus"
version = "0.0.11"
description = "Patcher for text embedded to the executable of the Dwarf Fortress game"
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
peclasses = { url = "https://github.com/dfint/peclasses/releases/download/0.4.0/peclasses-0.4.0-py3-none-any.whl" }

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dfrus = 'dfrus.dfrus:_main'
extract_strings = 'dfrus.extract_strings:_main'
edit_relocs = "dfrus.edit_relocs:_main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
